tests/last_duplicate_property_wins/last_duplicate_property_wins.exp
Error ----------------------------------------------------------------------------------------------------- test.js:12:3

Cannot shadow proto property `bar` [1] because string [2] is incompatible with function [3]. [incompatible-type]

   test.js:12:3
   12|   bar: string; // error: can't shadow proto with incompatible own
         ^^^

References:
   test.js:10:3
   10|   bar(): number { return 0; }
         ^^^ [1]
   test.js:12:8
   12|   bar: string; // error: can't shadow proto with incompatible own
              ^^^^^^ [2]
   test.js:10:3
   10|   bar(): number { return 0; }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:13:3

Cannot shadow proto property `qux` [1] because number [2] is incompatible with function [3]. [incompatible-type]

   test.js:13:3
   13|   qux: number; // error: can't shadow proto with incompatible own
         ^^^

References:
   test.js:15:3
   15|   qux(): string { return "hello" }
         ^^^ [1]
   test.js:13:8
   13|   qux: number; // error: can't shadow proto with incompatible own
              ^^^^^^ [2]
   test.js:15:3
   15|   qux(): string { return "hello" }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:20:2

Cannot cast `(new C).foo()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:20:2
   20| ((new C).foo(): boolean); // last wins
        ^^^^^^^^^^^^^

References:
   test.js:6:10
    6|   foo(): string { return "hello" } // last wins
                ^^^^^^ [1]
   test.js:20:17
   20| ((new C).foo(): boolean); // last wins
                       ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:2

Cannot cast `(new C).x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:21:2
   21| ((new C).x: boolean); // last wins
        ^^^^^^^^^

References:
   test.js:9:6
    9|   x: string; // last wins
            ^^^^^^ [1]
   test.js:21:13
   21| ((new C).x: boolean); // last wins
                   ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:2

Cannot cast `(new C).bar` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:22:2
   22| ((new C).bar: empty); // error: string ~> empty (own prop wins)
        ^^^^^^^^^^^

References:
   test.js:12:8
   12|   bar: string; // error: can't shadow proto with incompatible own
              ^^^^^^ [1]
   test.js:22:15
   22| ((new C).bar: empty); // error: string ~> empty (own prop wins)
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:2

Cannot cast `(new C).qux` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:23:2
   23| ((new C).qux: empty); // error: number ~> empty (own prop wins)
        ^^^^^^^^^^^

References:
   test.js:13:8
   13|   qux: number; // error: can't shadow proto with incompatible own
              ^^^^^^ [1]
   test.js:23:15
   23| ((new C).qux: empty); // error: number ~> empty (own prop wins)
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:40:2

Cannot cast `o.foo()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:40:2
   40| (o.foo(): boolean); // last wins
        ^^^^^^^

References:
   test.js:29:10
   29|   foo(): string { return "hello" }, // last wins
                ^^^^^^ [1]
   test.js:40:11
   40| (o.foo(): boolean); // last wins
                 ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:41:2

Cannot cast `o.x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:41:2
   41| (o.x: boolean); // last wins
        ^^^

References:
   test.js:31:6
   31|   x: "hello", // last wins
            ^^^^^^^ [1]
   test.js:41:7
   41| (o.x: boolean); // last wins
             ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:42:2

Cannot cast `o.bar` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:42:2
   42| (o.bar: boolean); // last wins
        ^^^^^

References:
   test.js:33:8
   33|   bar: "hello", // last wins
              ^^^^^^^ [1]
   test.js:42:9
   42| (o.bar: boolean); // last wins
               ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:43:2

Cannot cast `o.qux()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:43:2
   43| (o.qux(): boolean); // last wins
        ^^^^^^^

References:
   test.js:35:10
   35|   qux(): string { return "hello" }, // last wins
                ^^^^^^ [1]
   test.js:43:11
   43| (o.qux(): boolean); // last wins
                 ^^^^^^^ [2]



Found 10 errors
